# Analyzer-GPT-Team

./: README.md  frontend.py  main.py  pyproject.toml  requirements.txt  test.py
agents/: DataAnalyzerPrompt.py  Data_analyzer_agent.py  code_executor_agent.py
agents/temp/: tmp_code_4ed34d8c285cbcef1ff86ecbb4c5e78db0656dc9965286c6bf5b11f56848e6eb.python
config/: config.py  docker_utils.py  openai_model_client.py  pyproject.toml
teams/: analyzer_gpt.py  main.py  pyproject.toml
temp/: tmp_code_0c13f8eed88fb9e6ed975188fcd07775ca01e59d5623342bf26180b6c77f5289.python  tmp_code_101aabdb79e93f105f047c1915299c4b3385c918c31c02d9f6e2dd11dd2f5c11.python  tmp_code_32e9c20a166f99d560bab454491caf1c9281bc924fc407e4869c8ead0082bcb8.python  tmp_code_6abfe83bf00e085b67af2f1c15b0124ffb32068d95e802ccf02ce6b6f5174e4e.python  tmp_code_8a3958e69a603bd3f3cc91fd1ccf7a23c7d4350ef6ae97922fb82afaf593d942.python  tmp_code_b6629608c34e5cf125bc80161aa93e73fe9d000d9db542fc32d9370bf3bc4046.python  tmp_code_bce973fa40cae01d56abb233f128474b53a05b2bc4a8dd8565e229f3b77b28e5.python
